implement soft delete architecture and remove history table